# marketplace-signup

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build_test.yml  docker.yml
resources/docker-compose/dev/: docker-compose.yml
scripts/: conf.env  run.sh
src/: config.rs  github.rs  hash_check.rs  main.rs  rest.rs  starknet_client.rs
src/application/: registerer.rs
src/contracts/: badge_registry.rs  client.rs  errors.rs  mod.rs
src/domain/services/: identity_provider.rs  onchain_registry.rs
src/github/: mod.rs
src/identity_providers/: github.rs  mod.rs
src/infrastructure/: registry_client.rs  starknet_client.rs
src/rest/: cors.rs  felt.rs  mod.rs  problem.rs  registrations.rs  router.rs
