[package]
name = "deathnote-signup"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
http-api-problem = { version = "0.53.0", features = ["rocket", "json-schema", "api-error", "rocket-okapi"] }
reqwest = { version = "0.11", features = ["json"] }
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
serde_with = "1.14.0"
thiserror = "1.0.31"

[dev-dependencies]
mockall = "0.11.1"
httpmock = "0.6"
claim = "0.5"
rand = "0.8.5"
